# executorch-runtime-dist

./: .gitignore  2026-07-02-executorch-runtime-dist-design.md  CLAUDE.md  README.md  build-runtime.sh
.github/actions/checkout-executorch/: action.yml
.github/actions/lstm-roundtrip/: action.yml
.github/workflows/: extras-gate.yml  release.yml
cmake/: assert_extras_registered.cmake
docs/: extras-gate.md  handover-to-engine.md  handover-windows-static-cxx17.md  lstm-op-consumer-guide.md  lstm-op-delivery-strategy.md  lstm-xnn-cache-usdt.md
docs/superpowers/notes/: 2026-07-10-lstm-derisk-findings.md  2026-07-15-flatc-win32-byproduct-upstream-issue.md  2026-07-18-et-cxx17-propagation-gap.md
docs/superpowers/plans/: 2026-07-02-executorch-runtime-dist.md  2026-07-07-release-platform-matrix.md  2026-07-10-lstm-op-upstream-productionization.md  2026-07-11-extras-custom-code-qa-gate.md  2026-07-13-lstm-cache-usdt-tracepoints.md  2026-07-15-pin-filesystem-discovery.md  2026-07-15-windows-amd64-artifacts.md  2026-07-18-windows-static-crt.md
docs/superpowers/specs/: 2026-07-07-release-platform-matrix-design.md  2026-07-10-lstm-op-upstream-productionization-design.md  2026-07-11-extras-custom-code-qa-gate-design.md  2026-07-13-lstm-cache-usdt-tracepoints-design.md  2026-07-15-pin-filesystem-discovery-design.md  2026-07-15-windows-amd64-artifacts-design.md  2026-07-18-windows-static-crt-design.md
extras/: CMakeLists.txt  README.md  generate_schema_header.py  link_probe.cpp  test_generate_schema_header.py
extras/cmake/: ETNPExtras.cmake.in
extras/lstm/: extra.yaml
extras/lstm/aot/: emit_fixtures.py  etnp_lstm_op.py  lstm_case.py
extras/lstm/runtime/: CMakeLists.txt  etnp_lstm.cpp  etnp_usdt.h  lstm_cell.cc  lstm_cell.h  xnn_linear.h  xnn_linear_cache.h
extras/lstm/test/: CMakeLists.txt  _runner.py  consumer_smoke.py  lstm_kernel_test.cpp  lstm_runner.cpp  test_aot_defines_op.py  test_consumer_smoke.py  test_emit_fixtures.py  test_lstm_roundtrip.py
scripts/: check-usdt-notes.sh  check-windows-crt.sh  classify-gate.sh  derive-version.sh  discover-pin-rows.sh  gen-buildinfo.sh  gen-pin.sh  package-fixtures.sh  package.sh
scripts/lib/: cmakeflags.sh  configure-base.sh  naming.sh  variants.sh
spike/: build.sh  gate.sh  upstream-bug-report.md  windows-msvc-spike.md
spike/consumer/: CMakeLists.txt  probe.cpp
spike/mt-crt/: FINDINGS.md  README.md  build-mt.sh  check-crt.sh  clean.sh  consume-mt.sh  diagnose-env.sh  probe-clangcl-optimized.sh  run-all.sh
test/: build_cli.test.sh  build_smoke.sh  buildinfo.test.sh  check_windows_crt.test.sh  classify_gate.test.sh  derive_version.test.sh  discover_pin_rows.test.sh  exec_perms.test.sh  extras_members.test.sh  extras_only.test.sh  lib_configure_base.test.sh  lib_naming.test.sh  lib_variants.test.sh  package.test.sh  package_fixtures.test.sh  pin.test.sh  pin_discovery_integration.test.sh  relocatability-windows.sh  relocatability.sh  usdt_notes.test.sh  usdt_probe_smoke.sh
test/consumer/: CMakeLists.txt  probe.cpp
